--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
 <link href="assets/css/prettyPhoto.css" rel="stylesheet" type="text/css" />
 <link href="assets/js/google-code-prettify/prettify.css" rel="stylesheet">
 
-<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-<!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 <!-- Le fav and touch icons -->
 <link rel="shortcut icon" href="assets/ico/favicon.ico">
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
@@ -416,8 +412,8 @@ Somos un equipo de profesionales convencidos de que la diversión es el mejor re
 <p class="caption-descr"><b>Ignacio</b> es Licenciado en Administración por la Universidad de Buenos Aires y cuenta con estudios en Gamification (University of Pennsylvania). Pensador pragmático, impulsa los proyectos de Engament generando propuestas innovadoras que le permitan disfrutar no solamente el resultado final alcanzado, sino también del proceso creador.</p>
 
 <ul class="social-bottom">
-<li><span class="badge" style='background-color:#0976b4'><a href="http://ar.linkedin.com/in/ignacionabhen" title="Ignacio Nabhen en LinkedIn"><i class="fa-icon-linkedin"></i></a></span></li>
-<li><span class="badge" style='background-color:#55acee'><a href="http://www.twitter.com/IgnacioNabhen" title="Ignacio Nabhen en Twitter"><i class="fa-icon-twitter"></i></a></span></li>
+<li><span class="badge" style='background-color:#0976b4'><a href="https://ar.linkedin.com/in/ignacionabhen" title="Ignacio Nabhen en LinkedIn"><i class="fa-icon-linkedin"></i></a></span></li>
+<li><span class="badge" style='background-color:#55acee'><a href="https://www.twitter.com/IgnacioNabhen" title="Ignacio Nabhen en Twitter"><i class="fa-icon-twitter"></i></a></span></li>
 </ul>
 
 
@@ -440,8 +436,8 @@ Somos un equipo de profesionales convencidos de que la diversión es el mejor re
 <p class="caption-descr">Llegado desde el Fin del Mundo, <b>Enrique</b> se encarga de mantenernos siempre en la vanguardia tecnológica. Ingeniero en Informática por la Universidad de Buenos Aires, ejerce la docencia en dicha casa de estudios y en el Instituto Tecnológico de Buenos Aires. Asimismo, cuenta con estudios en Gamification por la University of Pennsylvania.</p>
 
 <ul class="social-bottom">
-<li><span class="badge" style='background-color:#0976b4'><a href="http://ar.linkedin.com/in/ecalot/es" title="Enrique Calot en LinkedIn"><i class="fa-icon-linkedin"></i></a></span></li>
-<li><span class="badge" style='background-color:#55acee'><a href="http://www.twitter.com/hcalot" title="Enrique Calot en Twitter"><i class="fa-icon-twitter"></i></a></span></li>
+<li><span class="badge" style='background-color:#0976b4'><a href="https://ar.linkedin.com/in/ecalot/es" title="Enrique Calot en LinkedIn"><i class="fa-icon-linkedin"></i></a></span></li>
+<li><span class="badge" style='background-color:#55acee'><a href="https://www.twitter.com/hcalot" title="Enrique Calot en Twitter"><i class="fa-icon-twitter"></i></a></span></li>
 </ul>
 
 </div><!--END CAPTION --> 
@@ -464,7 +460,7 @@ Somos un equipo de profesionales convencidos de que la diversión es el mejor re
 </p>
 
 <ul class="social-bottom">
-<li><span class="badge" style='background-color:#0976b4'><a href="http://ar.linkedin.com/in/rodolfonabhen/es" title="Rodolfo Nabhen en LinkedIn"><i class="fa-icon-linkedin"></i></a></span></li>
+<li><span class="badge" style='background-color:#0976b4'><a href="https://ar.linkedin.com/in/rodolfonabhen/es" title="Rodolfo Nabhen en LinkedIn"><i class="fa-icon-linkedin"></i></a></span></li>
 </ul>
 
 </div><!--END CAPTION --> 
@@ -650,10 +646,10 @@ Engament es un servicio de cloud computing, en la nube, al que se accede vía In
 <h4 class="main-color-spec-line"><i class="fa-icon-share main-color-spec"></i> <span>Seguinos</span></h4>
 <ul class="social-bottom">
 
-<li><span class="badge badge-warning"><a href="http://www.facebook.com/engament" title="Engament Facebook Page"><i class="fa-icon-facebook"></i></a></span></li>
-<li><span class="badge badge-warning"><a href="http://www.twitter.com/engament_" title="Engament Twitter Page"><i class="fa-icon-twitter"></i></a></span></li>
+<li><span class="badge badge-warning"><a href="https://www.facebook.com/engament" title="Engament Facebook Page"><i class="fa-icon-facebook"></i></a></span></li>
+<li><span class="badge badge-warning"><a href="https://www.twitter.com/engament_" title="Engament Twitter Page"><i class="fa-icon-twitter"></i></a></span></li>
 <!--<li><span class="badge badge-warning"><a href="#" title=""><i class="fa-icon-google-plus"></i></a></span></li>-->
-<li><span class="badge badge-warning"><a href="http://www.linkedin.com/company/engament/" title="Engament Linked-In Page"><i class="fa-icon-linkedin"></i></a></span></li>
+<li><span class="badge badge-warning"><a href="https://www.linkedin.com/company/engament/" title="Engament Linked-In Page"><i class="fa-icon-linkedin"></i></a></span></li>
 </ul>
 
 
@@ -750,7 +746,7 @@ Engament es un servicio de cloud computing, en la nube, al que se accede vía In
 <!-- PARALLAX PLUGIN -->
 
 <!-- gMap PLUGIN -->
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="https://maps.google.com/maps/api/js?sensor=false"></script>
 <script type="text/javascript" src="assets/js/jquery.gmap.js"></script>
 <!-- gMap PLUGIN -->
 <script src="assets/js/custom.js" type="text/javascript"></script>
@@ -906,8 +902,8 @@ jQuery('#header-section').bind('inview', function (event, visible) {
 			overviewMapControl: true,
 			scrollwheel: true,
 			icon: {
-				image: "http://www.google.com/mapfiles/marker.png",
-				shadow: "http://www.google.com/mapfiles/shadow50.png",
+				image: "https://www.google.com/mapfiles/marker.png",
+				shadow: "https://www.google.com/mapfiles/shadow50.png",
 				iconsize: [20, 34],
 				shadowsize: [37, 34],
 				iconanchor: [9, 34],
